<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relAddr"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_address" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgAddr"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvConsignee"
            style="@style/TextViewCaption"
            android:text="@string/address_consignee"
            android:textColor="@color/font_black" />

        <TextView
            android:id="@+id/tvPhone"
            style="@style/TextViewCaption"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/address_phone"
            android:textColor="@color/font_black" />

        <TextView
            android:id="@+id/tvAddress"
            style="@style/TextViewCaption"
            android:text="@string/address_detail"
            android:textColor="@color/font_black" />

    </LinearLayout>


</RelativeLayout>