<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="15.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textOrderState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/font_red" />

        <TextView
            android:id="@+id/textOrderNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOrderStatePrompt"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:text="@string/order_code"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/textCreateOrderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOrderNum"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical"
            android:text="@string/order_date"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />


        <TextView
            android:id="@+id/textPayType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCreateOrderTime"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical"
            android:text="@string/order_pay_type"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp"
           />

        <TextView
            android:id="@+id/tvLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPayType"
            android:layout_marginTop="5.0dip"
            android:gravity="center_vertical"
            android:text="@string/order_message_leave"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/textOrderStatePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/order_info"
            android:textColor="@color/font_black"
            android:textSize="12sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bg_grey" />
</LinearLayout>