<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relAddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgAddr"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConsignee"
                style="@style/TextViewCaption"
                android:text="收货人："
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/tvPhone"
                style="@style/TextViewCaption"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="收货电话："
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/TextViewCaption"
                android:text="收货地址："
                android:textColor="@color/font_black" />

        </LinearLayout>


    </RelativeLayout>

    <View
        style="@style/lineSolid"
        android:layout_marginTop="8.0dip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="15.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textOrderStatePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/order_info"
            android:textColor="@color/font_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textOrderState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/font_red" />

        <TextView
            android:id="@+id/textOrderNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOrderStatePrompt"
            android:layout_marginTop="15.0dip"
            android:gravity="center_vertical"
            android:text="@string/order_code"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/textCreateOrderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOrderNum"
            android:layout_marginTop="8.0dip"
            android:gravity="center_vertical"
            android:text="@string/order_date"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />


        <TextView
            android:id="@+id/textPayType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCreateOrderTime"
            android:layout_marginTop="8.0dip"
            android:gravity="center_vertical"
            android:text="@string/pay_type"
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/tvLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPayType"
            android:layout_marginTop="8.0dip"
            android:gravity="center_vertical"
            android:text="留        言："
            android:textColor="@color/font_grey"
            android:textSize="12.0sp" />


    </RelativeLayout>

    <View style="@style/lineSolid" />

    <View
        style="@style/lineSolid"
        android:layout_marginTop="8.0dip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvArea"
            style="@style/TextViewCaption"
            android:layout_margin="10dp"
            android:text="洪福添美广场>" />

        <TextView
            android:id="@+id/tvTotalCount"
            style="@style/TextViewCaption"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="共1件" />

    </RelativeLayout>
</LinearLayout>